# gitlab-mtls

./: .gitignore  BUILD  Dockerfile  MODULE.bazel  README.md  gitlab-basic.yaml  go.mod  maven_install.json
.agent/: rules.md
.agent/workflows/: kind_development.md  scaffold_java_bazel.md
cmd/proxy/: main.go  main_test.go
docs/: design.md  threat_model.md
java/src/main/java/com/gitlab/proxy/: BUILD  Config.java  Main.java  ProxyHandler.java  TokenManager.java
java/src/test/java/com/gitlab/proxy/: BUILD  TokenManagerTest.java  VersionTest.java
scripts/: gen-certs.sh
