module(
    name = "gitlab_mtls_proxy",
    version = "1.0.0",
)

bazel_dep(name = "rules_java", version = "7.6.1")
bazel_dep(name = "rules_jvm_external", version = "6.8")
bazel_dep(name = "rules_oci", version = "1.7.5")
bazel_dep(name = "rules_pkg", version = "0.10.1")
bazel_dep(name = "platforms", version = "0.0.10")

# Helper to download JDK
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "jdk25",
    build_file_content = """
load("@rules_java//java:defs.bzl", "java_runtime")
load("@bazel_tools//tools/jdk:default_java_toolchain.bzl", "default_java_toolchain")

package(default_visibility = ["//visibility:public"])

java_runtime(
    name = "runtime",
    srcs = glob(["**"]),
    java_home = ".",
    java = "bin/java",
)

default_java_toolchain(
    name = "toolchain_impl",
    source_version = "25",
    target_version = "25",
    java_runtime = ":runtime",
)

toolchain(
    name = "toolchain",
    toolchain = ":toolchain_impl",
    toolchain_type = "@bazel_tools//tools/jdk:toolchain_type",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

toolchain(
    name = "runtime_toolchain",
    toolchain = ":runtime",
    toolchain_type = "@bazel_tools//tools/jdk:runtime_toolchain_type",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

toolchain(
    name = "bootstrap_runtime_toolchain",
    toolchain = ":runtime",
    toolchain_type = "@bazel_tools//tools/jdk:bootstrap_runtime_toolchain_type",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)
""",
    integrity = "sha256-Rxs+Yr3/rtJ+NwBdhC2GOfENJEzM4cfN6/erzgbIMT4=",
    strip_prefix = "zulu25.30.17-ca-jdk25.0.1-linux_x64",
    urls = ["https://cdn.azul.com/zulu/bin/zulu25.30.17-ca-jdk25.0.1-linux_x64.tar.gz"],
)

register_toolchains(
    "@jdk25//:toolchain",
    "@jdk25//:runtime_toolchain",
    "@jdk25//:bootstrap_runtime_toolchain",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [
        "com.fasterxml.jackson.core:jackson-databind:2.16.1",
        "io.prometheus:simpleclient:0.16.0",
        "io.prometheus:simpleclient_httpserver:0.16.0",
        "io.prometheus:simpleclient_hotspot:0.16.0",
        "junit:junit:4.13.2",
    ],
    resolver = "maven",
    lock_file = "//:maven_install.json",
)
use_repo(maven, "maven")
